created mtuoc plugin based on the azure-translate-plugin code from omegat

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-plugin.name=Azure Translator V2/V3
+plugin.name=MTUOC Plugin
 plugin.category=machinetranslator
-plugin.link=https://github.com/omegat-org/azure-translate-plugin
-plugin.author=OmegaT team
-plugin.description=Microsoft Azure Translator V2/V3 MT connector
+plugin.link=https://github.com/omegat-org/azure-translate-plugin.git
+plugin.author=Tommi Nieminen
+plugin.description=MTUOC MT server connector
 plugin.license=GNU General Public License version 3
