--- a/src/main/resources/MtuocBundle.properties
+++ b/src/main/resources/MtuocBundle.properties
@@ -6,6 +6,6 @@ MT_ENGINE_PORT=MTUOC Server port
 MT_ENGINE_MICROSOFT_SUBSCRIPTION_KEY_LABEL=Subscription key:
 MT_ENGINE_MICROSOFT_SUBSCRIPTION_REGION=Region/location
 # Error message
-MT_ENGINE_MICROSOFT_WRONG_RESPONSE=Wrong response from engine
+MT_ENGINE_NO_RESPONSE=No response from engine (check configuration)
 MT_ENGINE_API_KEY_NOTFOUND=MTUOC API Key not available. See the user guide for instructions.
 MT_ENGINE_MICROSOFT_V3_NOT_IMPLEMENTED=The connector is not implemented yet to connect Azure Translator V3
